[package]
name = "qbench"
version = "0.1.0"
edition = "2021"
authors = ["HariBabu Nalluri <harinvb@gmail.com>"]
description = """A simple query benchmarking tool for SQL databases,
specifically designed for checking performance between
multiple versions of same query."""
license = "MIT"

[lib]
name = "qbench"
path = "src/lib.rs"

[[bin]]
name = "qbench"
path = "src/bin/qbench.rs"

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
async-trait = "0.1.68"
clap = { version = "4.2.7", features = ["derive"] }
console = { version = "0.15.6", features = ["windows-console-colors"] }
futures = "0.3.28"
glob = "0.3.1"
humantime = "2.1.0"
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "all-databases"] }
tabled = { version = "0.12.0", features = ["color"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
